# CuRast

./: CMakeLists.txt  README.md
cmake/: common.cmake
libs/jpg/: README.md  turbojpeg-static.lib
libs/jpg/pkgconfig/: libturbojpeg.pc
libs/laszip/src/: arithmeticmodel.cpp  integercompressor.cpp
resources/scripts/: check_indexbuffer.mjs  compare_images.py  compute_bpp.mjs  convert_images.py  eval_results.py  extract_closeups.py  generate_results_page.mjs  gltfcheck.mjs  image_comparison.py  image_comparison_cmd.py  image_comparison_cmd2.py  notes.md
src/: Benchmarking.h  CURuntime.h  CuRast.cpp  CuRast.h  CuRastSettings.h  CuRast_render.h  CuRast_vulkanRender.h  CudaVirtualMemory.h  GLTFLoader.h  ImageLoader.cpp  LargeGlbLoader.h  MemoryManager.h  MouseEvents.h  OrbitControls.h  PlyLoader.h  Runtime.h  TextureManager.h  VKRenderer.cpp  VKRenderer.h  VulkanCudaSharedMemory.h  main.cpp
src/gui/: menubar.h  stats.h  toolbar.h  widget_benchmarking.h  widget_kernels.h  widget_memory.h  widget_timings.h
src/jpeg/: BitReader.h  BitReaderGPU.cuh  HashMap.cuh  JPEGIndexer.h  JpegTextures.h  JptInterface.cuh  dct.cuh  jpeg.cu
src/kernels/: HostDeviceInterface.h  lines.cu  rasterization_helpers.cuh  resolve.cu  textureTools.cu  textureTools.cuh  triangles_common.cuh  triangles_heightmap.cu  triangles_visbuffer.cu  utils.cuh
src/scene/: Mesh.h  Pointcloud.h  SNCPoints.h  SNPoints.h  SNTriangles.h  Scene.h  SceneNode.h
src/shaders/: mesh.h  mesh.slang  mesh_indexpulling.h  mesh_indexpulling.slang  mesh_visbuffer.h  mesh_visbuffer.slang  mesh_visbuffer_resolve.h  mesh_visbuffer_resolve.slang
src/tools/: PlyToGlb.cpp  benchmarks_to_latex.mjs
